[add]agregando comentarios

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!-- vista principal, importando base de html-->
 <%- include("template/base_open.ejs",{title:"Home"})%>
 <div class="viewCenter basicContainer  sizingContainer">
     <p class="textCenter"><strong>Hola Mundo</strong></p>
