--- a/public/css/Globals.css
+++ b/public/css/Globals.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #E3FEF7;
+    background-color: #DDDDDD;
+    margin:0px
 }
 .viewCenter{
   position: fixed;
@@ -75,3 +76,66 @@ body{
  .textCenter{
     text-align: center;
  }
+ .viewContainer{
+    width: 100%;
+    min-height: 100vh;
+    padding: 5%;
+    
+}
+.normalContainer{
+    width: 100%;
+    background: #B5C0D0;
+    padding: 20px;
+}
+.gridFlex{
+    box-sizing: border-box;
+    display: flex;
+    flex-flow:wrap ;
+    margin: auto;
+    justify-content: center;
+}
+.midwidth{
+    width: 50%;
+}
+.flexCenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.marginAuto{
+    margin: auto;
+}
+.circle{
+    border-radius: 100%;
+    border: solid 2px #DDDDDD;
+}
+.lineHorizontal{
+    width: 100%;
+    height: 0;
+    border: solid 1px gray;
+}
+.personalImage{
+    width: 180px;
+    height: 180px;
+    margin:10px 0px;
+}
+.lineVertical{
+    width: 0%;
+    height: 300px;
+    margin:0px 10px;
+    border: solid 1px gray;
+}
+p,h4,h3{
+    margin: 4px;
+}
+@media (max-width: 500px) {
+    .lineVertical{
+        display: none;
+    }
+}
+.leftContainer{
+    width: 200px;
+}
+.marginRight-auto{
+    margin-right: auto;
+}
