--- a/views/error_404.ejs
+++ b/views/error_404.ejs
@@ -1,4 +1,6 @@
 <%- include("template/base_open.ejs",{title:"Home"})%>
+<%- include("template/nav_bar.ejs",{onlyRute:undefined})%>
+
 <div class="viewCenter basicContainer  sizingContainer">
     <div class="centerContainer">
             <%- include('template/triangle_adver.ejs')%>
