--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,7 @@
-<!-- vista principal, importando base de html-->
-<%- include("template/base_open.ejs",{title:"Home"})%>
-<div class="viewContainer gridFlex"> 
-    <div class="normalContainer">
-        <div class="flexCenter normalContainer gridFlex">
-            <div >
-                <img class="circle personalImage" src="/image.jpg" >
-            </div>
-            <div class="marginAuto">
-                <h1>Justin Javier</h1>
-                <h1>Vegas Linero</h1>
-
-            </div>
-
-        </div>
-        <div class="lineHorizontal"></div>
-        <div class="normalContainer gridFlex">
-            <div class="leftContainer">
-            <div>
-                <h4>Cedula</h4>
-                <p>30.703.464</p>
-            </div>
-            <div>
-                <h4>Correo</h4>
-                <p>Justinvegas14@gmail.com</p>
-            </div>
-            <div>
-                <h4>Direccion</h4>
-                <p >San Juan de los Morros,Valle Verde, calle San Miguel</p>
-            </div>
-            <div>
-                <h4>Fecha de Nacimiento</h4>
-                <p >10 de marzo del 2005</p>
-            </div>
-            </div>
-            <div class="lineVertical"></div>
-            <div class="marginRight-auto">
-                <div>
-                    <h3>Experencia Laboral</h3>
-                    <p>-Sin Experencia Laboral</p>
-                </div>
-                <div>
-                    <h3>Educacion</h3>
-                    <h4>Educacion Primaria</h4>
-                    <p>E.U. 'Josefa Molina de Duque'. - 2017 </p>
-                    <h4>Educacion Media</h4>
-                    <p>L.N. 'Juan Germán Roscio'. - 2022 </p>
-                    <h4>Educacion Universitaria</h4>
-                    <p>U.N.E. "Romulo Gallegos". - Estudiando </p>
-                </div>
-                <div>
-                    <h4>Cursos</h4>
-                    <p >Curso basico de JavaScript en Sololearn -2022</p>
-                </div>
-                
-
-            </div>
-
-        </div>
-    </div>
+<%- include("template/base_open.ejs",{title:"Inicio"})%>
+<%- include("template/nav_bar.ejs",{onlyRute:'/'})%>
+<div>
+        por llenar
 </div>
+    
 <%- include("template/base_close.ejs")%>
