--- a/views/template/base_open.ejs
+++ b/views/template/base_open.ejs
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><%=title%></title>
 	<link rel="stylesheet" href="/css/Globals.css">
+	<link rel="stylesheet" href="/css/nav_css.css">
+
 
 </head>
 <body>	
