[FIX]arreglando titulos

--- a/views/addContact.ejs
+++ b/views/addContact.ejs
@@ -1,4 +1,4 @@
-<%- include("template/base_open.ejs",{title:"Curriculum"})%>
+<%- include("template/base_open.ejs",{title:"Agregar Contacto"})%>
 
 <div class="allview flexColumn">
     <%- include("template/nav_bar.ejs",{onlyRute:'/contact'})%>
