--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,4 +1,4 @@
-<%- include("template/base_open.ejs",{title:"Inicio"})%>
+<%- include("template/base_open.ejs",{title:"Contactos"})%>
 <div class="allview flexColumn">
         <%- include("template/nav_bar.ejs",{onlyRute:'/contacts'})%>
 
