--- a/views/template/base_open.ejs
+++ b/views/template/base_open.ejs
@@ -8,7 +8,15 @@
 	<link rel="stylesheet" href="/css/Globals.css">
 	<link rel="stylesheet" href="/css/nav_css.css">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G17RQDFMV5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-G17RQDFMV5');
+</script>
 </head>
 <body>	
 
