--- a/views/addContact.ejs
+++ b/views/addContact.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>	
 <div class="allview flexColumn">
-    <%- include("template/nav_bar.ejs",{onlyRute:'/contact'})%>
+    <%- include("template/nav_bar.ejs",{onlyRute:'/contacts/addContact'})%>
     <form method="post" action="/contacts/addContact" id="form-contact" class="form centerContainer my-2 ">
         <p class="title">Registro de Contactos </p>
 
