--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,6 +1,6 @@
 <%- include("template/base_open.ejs",{title:"Contactos"})%>
 <div class="allview flexColumn">
-        <%- include("template/nav_bar.ejs",{onlyRute:'/contacts'})%>
+        <%- include("template/nav_bar.ejs",{onlyRute:'/contacts/contactos'})%>
 
         <div class="expandDiv centerContainer my-2" >
                 <p class="expandTitle">Lista de Contactos </p>
