--- a/views/template/base_open.ejs
+++ b/views/template/base_open.ejs
@@ -7,6 +7,15 @@
 	<title><%=title%></title>
 	<link rel="stylesheet" href="/css/Globals.css">
 	<link rel="stylesheet" href="/css/nav_css.css">
+	<meta name="author" content="Justin Vegas">
+	<meta name="keywords" content="proyecto programacion  html curriculum  sql css node estudiante">
+	<meta name="description" content="pequeña pagina de actividad para un proyecto de programacion">
+	<meta property="og:type" content="webSite">
+	<meta property="og:url" content="https:p2-30703464.onrender.com">
+	<meta property="og:description" content="pequeña pagina de actividad para un proyecto de programacion">
+	<meta property="og:locale" content="es_ES">
+
+	
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G17RQDFMV5"></script>
